--- a/MVC_Movie/MVC_Movie.csproj
+++ b/MVC_Movie/MVC_Movie.csproj
@@ -22,4 +22,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="MvcMovie.db" />
+  </ItemGroup>
 </Project>
